[gd_scene load_steps=77 format=2]

[ext_resource path="res://special_item.png" type="Texture" id=1]
[ext_resource path="res://special_item.gd" type="Script" id=2]
[ext_resource path="res://sprites/item_effect.png" type="Texture" id=3]
[ext_resource path="res://sprites/sprite_explode.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.0129, 14.5859 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 60, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 180, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 60, 60, 60 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 60, 60, 60, 60 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 120, 60, 60, 60 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 180, 60, 60, 60 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 60, 60, 60 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 120, 60, 60 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 60, 120, 60, 60 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 120, 120, 60, 60 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 180, 120, 60, 60 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 120, 60, 60 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 180, 60, 60 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 60, 180, 60, 60 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 120, 180, 60, 60 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 180, 180, 60, 60 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 180, 60, 60 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 240, 60, 60 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 60, 240, 60, 60 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 120, 240, 60, 60 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 180, 240, 60, 60 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 240, 60, 60 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 300, 60, 60 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 60, 300, 60, 60 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 120, 300, 60, 60 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 180, 300, 60, 60 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 300, 60, 60 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 360, 60, 60 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 60, 360, 60, 60 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 120, 360, 60, 60 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 180, 360, 60, 60 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 360, 60, 60 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 420, 60, 60 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 60, 420, 60, 60 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 120, 420, 60, 60 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 180, 420, 60, 60 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 420, 60, 60 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 80, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 80, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 80, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 400, 80, 80 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 80, 400, 80, 80 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 400, 80, 80 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 400, 80, 80 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 400, 80, 80 )

[sub_resource type="SpriteFrames" id=32]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ) ],
"loop": false,
"name": "taken",
"speed": 40.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ) ],
"loop": true,
"name": "taken3",
"speed": 10.0
} ]

[node name="special_item" type="Area2D"]
position = Vector2( 1278.24, 189.213 )
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.6, 0.6 )
shape = SubResource( 1 )

[node name="special_item_sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 32 )
animation = "taken"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_special_item_body_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
